[gd_scene load_steps=27 format=3 uid="uid://km8ynqnq50c7"]

[ext_resource type="Texture2D" uid="uid://cgsfthgo76moq" path="res://assets/textures/pac-sprite-sheet.png" id="1_486ty"]
[ext_resource type="Script" uid="uid://d4gbms8wd3gii" path="res://scripts/menu_principal.gd" id="1_i85hu"]
[ext_resource type="Texture2D" uid="uid://cm0dgf5fnnqq6" path="res://assets/textures/fondo-pacclon-godot.png" id="2_mk4g1"]
[ext_resource type="Script" uid="uid://dln81amiwxr8c" path="res://scripts/pacman_intro.gd" id="2_w5ui5"]
[ext_resource type="AudioStream" uid="uid://criqj712hhtn8" path="res://assets/audio/pacmanintermision.ogg" id="3_iep14"]
[ext_resource type="Texture2D" uid="uid://ceqvl3g3as0hb" path="res://assets/textures/fantanim00.png" id="4_qcl6i"]
[ext_resource type="Script" uid="uid://bl4gsxsg4k64s" path="res://scripts/fantasma_intro.gd" id="5_nxt0m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w5ui5"]
atlas = ExtResource("1_486ty")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcl6i"]
atlas = ExtResource("1_486ty")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxt0m"]
atlas = ExtResource("1_486ty")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xgxd"]
atlas = ExtResource("1_486ty")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k4fm"]
atlas = ExtResource("1_486ty")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgh5n"]
atlas = ExtResource("1_486ty")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaljy"]
atlas = ExtResource("1_486ty")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hucf5"]
atlas = ExtResource("1_486ty")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qswqd"]
atlas = ExtResource("1_486ty")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u72up"]
atlas = ExtResource("1_486ty")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpt6j"]
atlas = ExtResource("1_486ty")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kodgl"]
atlas = ExtResource("1_486ty")
region = Rect2(704, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_icrni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5ui5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcl6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxt0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xgxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k4fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgh5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaljy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hucf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qswqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u72up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpt6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kodgl")
}],
"loop": true,
"name": &"Derecha",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_icrni"]
atlas = ExtResource("4_qcl6i")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_shudv"]
atlas = ExtResource("4_qcl6i")
region = Rect2(50, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_w5ui5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icrni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shudv")
}],
"loop": true,
"name": &"Derecha",
"speed": 15.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iep14"]
bg_color = Color(0.258824, 0.266667, 0.266667, 0.823529)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mk4g1"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i85hu"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MenuPrincipal" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 1964.0
offset_bottom = 1114.0
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_mk4g1")

[node name="PacmanIntro" type="AnimatedSprite2D" parent="CanvasLayer"]
z_index = 20
sprite_frames = SubResource("SpriteFrames_icrni")
animation = &"Derecha"
autoplay = "Derecha"
script = ExtResource("2_w5ui5")

[node name="FantasmaIntro" type="AnimatedSprite2D" parent="CanvasLayer"]
sprite_frames = SubResource("SpriteFrames_w5ui5")
animation = &"Derecha"
autoplay = "Derecha"
script = ExtResource("5_nxt0m")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = 68.0
offset_right = 120.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iep14")
script = ExtResource("1_i85hu")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Button" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.956863, 0.52549, 0.0901961, 1)
theme_override_colors/font_color = Color(0.968627, 0.933333, 0.0980392, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_mk4g1")
theme_override_styles/normal = SubResource("StyleBoxFlat_i85hu")
text = "Jugar"

[node name="Button2" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.956863, 0.52549, 0.0901961, 1)
theme_override_colors/font_color = Color(0.968627, 0.933333, 0.0980392, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_mk4g1")
theme_override_styles/normal = SubResource("StyleBoxFlat_i85hu")
text = "Opciones"

[node name="Button3" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.956863, 0.52549, 0.0901961, 1)
theme_override_colors/font_color = Color(0.968627, 0.933333, 0.0980392, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_mk4g1")
theme_override_styles/normal = SubResource("StyleBoxFlat_i85hu")
text = "Salir"

[node name="MusicaIntro" type="AudioStreamPlayer2D" parent="CanvasLayer/PanelContainer"]
position = Vector2(-827, -612)
stream = ExtResource("3_iep14")

[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Button" to="CanvasLayer/PanelContainer" method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Button2" to="CanvasLayer/PanelContainer" method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Button3" to="CanvasLayer/PanelContainer" method="_on_button_3_pressed"]
